deploy/k8s/catalog-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-mongo
  namespace: shopping
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog-mongo
  template:
    metadata:
      labels:
        app: catalog-mongo
    spec:
      containers:
        - name: mongo
          image: mongo:7
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-mongo
  namespace: shopping
spec:
  selector:
    app: catalog-mongo
  ports:
    - port: 27017
      targetPort: 27017
